--- a/aula05_web/lista_exercicios-10.09/form.html
+++ b/aula05_web/lista_exercicios-10.09/form.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cadastrar Novo Usuário</h1>
-    <form action="usuario.php" method="post">
+    <h1>Cadastro novo Usuario</h1>
+    <form action="salvar_usuarios.php" method="post">
         <label for="nome">Nome:</label><br>
         <input type="text" id="nome" name="nome" required><br><br>
 
         <label for="email">Email:</label><br>
-        <input type="email" name="email" id="email" required><br><br>
-        <button type="submit">Cadastrar</button>
+        <input type="text" name="email" id="email" required><br><br>    
+        <button type="submit">Cadastrar </button>
     </form>
 </body>
 </html>
